--- a/style.css
+++ b/style.css
@@ -12,3 +12,8 @@ body {
     height: 20px;
     background-color: blue;
 }
+.box1 {
+    width: 20px;
+    height: 20px;
+    background-color: red;
+}
